fix:[EP-551] wrong border color in radio button and wrong color icon input select

--- a/src/styles/overrider-antdv-style.scss
+++ b/src/styles/overrider-antdv-style.scss
@@ -29,7 +29,7 @@
   background-color: $white;
 }
 
-.ant-table-thead>tr>th {
+.ant-table-thead > tr > th {
   font-weight: 700 !important;
   line-height: 18px;
   height: 58px !important;
@@ -56,7 +56,7 @@
   border-bottom-right-radius: 0px !important;
 }
 
-.ant-table-tbody>tr.ant-table-row-selected>td {
+.ant-table-tbody > tr.ant-table-row-selected > td {
   background: $grey-2;
   border-color: rgba(0, 0, 0, 0.03);
 }
@@ -72,7 +72,7 @@
   text-overflow: ellipsis;
 }
 
-.ant-table-thead>tr>th {
+.ant-table-thead > tr > th {
   font-weight: 700;
 }
 
@@ -88,27 +88,27 @@
   background-color: $neutral-50;
 }
 
-.ant-table-container table>thead>tr>th {
+.ant-table-container table > thead > tr > th {
   background-color: $white;
 }
 
-.ant-table-container table>thead>tr:first-child th {
+.ant-table-container table > thead > tr:first-child th {
   color: $text-1;
 }
 
-.ant-table-container table>thead>tr:first-child th:first-child {
+.ant-table-container table > thead > tr:first-child th:first-child {
   border-top-left-radius: 10px !important;
 }
 
-.ant-table-container table>thead>tr:first-child th:last-child {
+.ant-table-container table > thead > tr:first-child th:last-child {
   border-top-right-radius: 10px !important;
 }
 
-.ant-table-container table>tbody>tr:last-child td:first-child {
+.ant-table-container table > tbody > tr:last-child td:first-child {
   border-bottom-left-radius: 0px;
 }
 
-.ant-table-container table>tbody>tr:last-child td:last-child {
+.ant-table-container table > tbody > tr:last-child td:last-child {
   border-bottom-right-radius: 0px;
 }
 
@@ -116,7 +116,9 @@
   background: $white;
 }
 
-.ant-table-thead>tr>th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before {
+.ant-table-thead
+  > tr
+  > th:not(:last-child):not(.ant-table-selection-column):not(.ant-table-row-expand-icon-cell):not([colspan])::before {
   height: 0 !important;
 }
 
@@ -129,11 +131,11 @@
   .ant-spin-nested-loading {
     .ant-spin-container {
       .ant-table {
-        .ant-table-container table>tbody>tr:last-child td:last-child {
+        .ant-table-container table > tbody > tr:last-child td:last-child {
           border-bottom-right-radius: 0px;
         }
 
-        .ant-table-container table>tbody>tr:last-child td:first-child {
+        .ant-table-container table > tbody > tr:last-child td:first-child {
           border-bottom-left-radius: 0px;
         }
       }
@@ -245,7 +247,7 @@
   }
 }
 
-.ant-spin-nested-loading>div>.ant-spin {
+.ant-spin-nested-loading > div > .ant-spin {
   max-height: 100% !important;
 
   .ant-spin-dot {
@@ -285,6 +287,9 @@
   color: $neutral-600;
   display: inline-flex;
   align-items: center;
+  .ant-radio-disabled .ant-radio-inner {
+    border-color: $text-1 !important;
+  }
 
   .ant-radio {
     font-size: 0px;
@@ -337,7 +342,6 @@
   align-items: center !important;
   justify-content: center !important;
 }
-
 
 .ant-empty-img-simple {
   display: none !important;
